src/test/deca/syntax/valid/declareVariables2.deca
// Description:
//    test de la déclaration avec plusieurs variables
// Resultats:
//   
//
// Historique:
//    cree le 22/01/2022


    
{
    float x ,y=4.20 ;
    int i , j = 1;


}

